# H2O_AutoML

./: .gitignore  LICENSE  README.md  main.py  pyproject.toml
assets/results/: benchmark_credit_card.json  benchmark_higgs_5m.json  e2e_results.json
benchmarks/: README.md
benchmarks/results/: mini_benchmark_results.csv  mini_summary_table.md
benchmarks/scripts/: benchmark_mini.py  benchmark_single.py  visualize_results.py
docs/: README.md  troubleshooting.md
docs/01-research/: 00_overview.md  01_stacked_ensemble_deep_dive.md  02_hyperparameter_tuning_deep_dive.md  03_gpu_native_application.md  05_memory_optimization_research.md  README.md
docs/02-design/: 04_rapids_implementation_strategy.md  06_presentation_narrative.md  PRD_memory-aware-gpu-automl.md  README.md  architecture.md
docs/03-results/: PLAN_memory-aware-gpu-automl.md  README.md  benchmark_interpretation.md  future_directions.md  limitations.md
docs/04-future/: 01_paged_attention_overview.md  02_ray_process_level_paging.md  03_hyperband_asha_oom_prevention.md
docs/05-gtc-2026/: 00_strategic_direction.md  01_PRD.md
docs/05-gtc-2027/: 00_strategic_direction.md  01_PRD.md
docs/assignment/: 00_overview.md  03_gpu_native_application.md  04_rapids_implementation_strategy.md  05_memory_optimization_research.md
docs/prd/: PRD_memory-aware-gpu-automl.md
docs/presentations/: 260408-presentation.md
docs/todo_plan/: PLAN_memory-aware-gpu-automl.md
gpu_automl/: __init__.py  automl.py  orchestrator.py  scheduler.py
gpu_automl/data/: __init__.py  loader.py  preprocessor.py
gpu_automl/ensemble/: __init__.py  stacking.py
gpu_automl/hpo/: __init__.py  random_search.py
gpu_automl/memory/: __init__.py  pool.py
gpu_automl/models/: __init__.py  base.py  (+3 more)
notebooks/: 01_h2o_automl_demo.ipynb  02_explainability.ipynb  03_gpu_native_redesign.ipynb  04_paged_automl_benchmark.ipynb
paged_automl/: __init__.py  orchestrator.py
scripts/: generate_charts.py
tests/: test_e2e_gpu.py
(+27 files in other folders)
