[project]
name = "h2o-automl"
version = "0.1.0"
description = "RAPIDS LAB 세미나: H2O AutoML 데모 및 발표 자료"
readme = "README.md"
requires-python = ">=3.9,<3.12"
dependencies = [
    "h2o==3.46.0.10",
    "jupyter>=1.0",
    "pandas>=1.3",
    "matplotlib>=3.5",
    "seaborn>=0.12",
    "tqdm>=4.67.3",  # notebook progress bars
]
